--- a/Toggl.Shared/Resources.resx
+++ b/Toggl.Shared/Resources.resx
@@ -1339,4 +1339,13 @@
     <data name="SiriWorkflowFocusModeDescription" xml:space="preserve">
         <value>Start a Time Entry, select a music playlist and turn on do not disturb.</value>
     </data>
+    <data name="UseSystemDefault" xml:space="preserve">
+        <value>Use System Default</value>
+    </data>
+    <data name="LightTheme" xml:space="preserve">
+        <value>Light Theme</value>
+    </data>
+    <data name="DarkTheme" xml:space="preserve">
+        <value>Dark Theme</value>
+    </data>
 </root>
