--- a/Toggl.Shared/Resources.resx
+++ b/Toggl.Shared/Resources.resx
@@ -1348,4 +1348,7 @@
     <data name="DarkTheme" xml:space="preserve">
         <value>Dark Theme</value>
     </data>
+    <data name="AppTheme" xml:space="preserve">
+        <value>App Theme</value>
+    </data>
 </root>
